# davinci

./: CMakeLists.txt  README.md
console/: CMakeLists.txt  dc_arcball_camera.h  dc_main.cpp  dc_ps_dirlight.h  dc_ps_material.h  dc_ps_solid.h  dc_ps_texture.h  dc_sample.cpp  dc_sample.h  dc_sample01.cpp  dc_sample01.h  dc_sample02.cpp  dc_sample02.h  dc_sample03.cpp  dc_sample03.h  dc_vs_standard.h
runtime/mesh/: sm_matpreviewmesh_02.dam
source/: CMakeLists.txt  davinci.h  dv_asset_utility.cpp  dv_common.h  dv_config.h.in  dv_device_buffer.cpp  dv_device_buffer.h  dv_entity.cpp  dv_entity.h  dv_index_buffer.cpp  dv_math_util.cpp  dv_math_util.h  dv_matrix3.h  dv_matrix4.cpp  dv_matrix4.h  dv_model.cpp  dv_model.h  dv_pipe_IA.cpp  dv_pipe_IA.h  dv_pipe_PS.cpp  dv_pipe_VS.cpp  dv_pipe_VS.h  dv_precompiled.cpp  dv_precompiled.h  dv_prerequisites.h  dv_rasterizer_larrabee.cpp  dv_render_device.cpp  dv_render_device.h  dv_render_queue.cpp  dv_render_queue.h  dv_scene.cpp  dv_texture.h  dv_vector2.cpp  dv_vector2.h  dv_vector3.cpp  dv_vector3.h  dv_vector4.cpp  dv_vertex_buffer.h  dv_vertex_desc.cpp  dv_vertex_desc.h
source/asset/: dv_asset_utility.cpp  dv_asset_utility.h  dv_model.cpp  dv_model.h  dv_texture.cpp  dv_texture.h
source/device/: dv_constant_buffer.cpp  dv_constant_buffer.h  dv_index_buffer.h  dv_pixel_buffer.cpp  dv_pixel_buffer.h  dv_render_device.cpp  dv_render_device.h  dv_render_target.cpp  dv_render_target.h  dv_vertex_buffer.cpp  dv_vertex_desc.cpp
source/math/: dv_fixmath.h  dv_matrix3.cpp  dv_matrix3.h  dv_matrix4.cpp  dv_matrix4.h  dv_vector2.cpp  dv_vector2.h  dv_vector3.cpp  dv_vector3.h  dv_vector4.cpp  dv_vector4.h
source/pipe/: dv_pipe_IA.cpp  dv_pipe_IA.h  dv_pipe_PS.cpp  dv_pipe_PS.h  dv_pipe_VS.cpp  dv_pipe_VS.h  dv_rasterizer.cpp  dv_rasterizer.h  dv_rasterizer_line.cpp  dv_rasterizer_triangle.cpp  dv_render_queue.cpp  dv_render_queue.h  dv_renderable.cpp  dv_renderable.h
source/scene/: dv_camera.cpp  dv_camera.h  dv_entity.cpp  dv_entity.h  dv_scene.cpp  dv_scene.h  dv_scene_object.cpp  dv_scene_object.h
test/: CMakeLists.txt
test/rasterization/: CMakeLists.txt  dvr_benchmark.cpp  dvr_benchmark.h  dvr_main.cpp  dvr_rasterizer.cpp  dvr_rasterizer.h  dvr_triangle.cpp  dvr_triangle.h
test/unit/: CMakeLists.txt  dvt_unit_common.h  dvt_unit_main.cpp  dvt_unit_matrix3.cpp  dvt_unit_matrix4.cpp  dvt_unit_rasterizer.cpp  dvt_unit_vector2.cpp  dvt_unit_vector3.cpp  dvt_unit_vector4.cpp
